# velodyne_description

velodyne_description/: CMakeLists.txt  package.xml
velodyne_description/launch/: display.launch.py
velodyne_description/urdf/: vlp16.urdf.xacro
