<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>velodyne_description</name>
  <version>0.0.1</version>
  <description>Velodyne VLP-16 URDF Description</description>
  <maintainer email="dh@todo.todo">dh</maintainer>
  <license>Apache-2.0</license>

  <!-- ROS 2 Build Tool -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Dependencies for URDF -->
  <depend>urdf</depend>
  <depend>xacro</depend>

  <!-- Dependencies for Launching -->
  <depend>launch</depend>
  <depend>launch_ros</depend>
  <depend>robot_state_publisher</depend>

  <!-- Testing -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
